<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/ic_cancel"
        android:contentDescription="@string/cancel_button_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:text="@string/submission_confirmation_text"
        android:textSize="32sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/confirmation_text"
        android:textColor="@color/colorSecondary"
        android:textStyle="bold"
        android:textSize="18sp"
        app:strokeColor="@color/colorSecondary"
        app:strokeWidth="4dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>