<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".SubmissionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:theme="@style/MyToolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/gads_angle"
                android:contentDescription="@string/gads_angle_icon" />
            <ImageView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/gads_title"
                android:contentDescription="@string/gads_angle_icon" />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/project_submission_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textColor="@color/colorSecondary"
        android:text="@string/project_submission_text"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/gradient_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/project_submission_textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/gradient_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginBottom="32dp"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fname_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="@string/first_name_hint"
                app:hintTextColor="@color/colorAccent"
                android:layout_weight="1"
                app:boxBackgroundColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fname_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lname_text_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint"
                app:hintTextColor="@color/colorAccent"
                android:layout_weight="1"
                app:boxBackgroundColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lname_text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address_hint"
            app:hintTextColor="@color/colorAccent"
            android:layout_marginBottom="32dp"
            app:boxBackgroundColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/link_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/github_project_link_hint"
            app:hintTextColor="@color/colorAccent"
            android:layout_marginBottom="32dp"
            app:boxBackgroundColor="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/link_text_input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_button_text"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:backgroundTint="@color/colorSecondary"
            android:enabled="false"
            app:cornerRadius="32dp" />
    </LinearLayout>

    <View
        android:id="@+id/scrim"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:alpha="0.8"
        android:background="@color/colorPrimary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_not_a_button"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorAccent"
        android:clickable="false"
        android:text="@string/submission_successful_msg"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_check"
        app:iconTint="@android:color/holo_green_dark"
        app:iconGravity="textTop"
        app:iconSize="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/error_not_a_button"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorAccent"
        android:clickable="false"
        android:text="@string/submission_unsuccessful_msg"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_error"
        app:iconTint="@android:color/holo_red_dark"
        app:iconGravity="textTop"
        app:iconSize="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>